--- a/index.ipynb
+++ b/index.ipynb
@@ -50,13 +50,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import necessary libraries\n",
-    "\n",
-    "## Your code here "
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier \n",
+    "from sklearn.metrics import accuracy_score, roc_curve, auc\n",
+    "from sklearn import tree \n",
+    "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
+    "from sklearn.externals.six import StringIO  \n",
+    "from IPython.display import Image  \n",
+    "from sklearn.tree import export_graphviz\n",
+    "import pydotplus\n",
+    "import pandas as pd \n",
+    "import numpy as np "
    ]
   },
   {
@@ -72,18 +81,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variance</th>\n",
+       "      <th>Skewness</th>\n",
+       "      <th>Kurtosis</th>\n",
+       "      <th>Entropy</th>\n",
+       "      <th>Class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.62160</td>\n",
+       "      <td>8.6661</td>\n",
+       "      <td>-2.8073</td>\n",
+       "      <td>-0.44699</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.54590</td>\n",
+       "      <td>8.1674</td>\n",
+       "      <td>-2.4586</td>\n",
+       "      <td>-1.46210</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.86600</td>\n",
+       "      <td>-2.6383</td>\n",
+       "      <td>1.9242</td>\n",
+       "      <td>0.10645</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.45660</td>\n",
+       "      <td>9.5228</td>\n",
+       "      <td>-4.0112</td>\n",
+       "      <td>-3.59440</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.32924</td>\n",
+       "      <td>-4.4552</td>\n",
+       "      <td>4.5718</td>\n",
+       "      <td>-0.98880</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Variance  Skewness  Kurtosis  Entropy  Class\n",
+       "0   3.62160    8.6661   -2.8073 -0.44699      0\n",
+       "1   4.54590    8.1674   -2.4586 -1.46210      0\n",
+       "2   3.86600   -2.6383    1.9242  0.10645      0\n",
+       "3   3.45660    9.5228   -4.0112 -3.59440      0\n",
+       "4   0.32924   -4.4552    4.5718 -0.98880      0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create Dataframe\n",
-    "\n",
-    "## Your code here "
+    "df = pd.read_csv('data_banknote_authentication.csv', header=None)\n",
+    "df.columns = ['Variance', 'Skewness', 'Kurtosis', 'Entropy', 'Class']\n",
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1372 entries, 0 to 1371\n",
+      "Data columns (total 5 columns):\n",
+      "Variance    1372 non-null float64\n",
+      "Skewness    1372 non-null float64\n",
+      "Kurtosis    1372 non-null float64\n",
+      "Entropy     1372 non-null float64\n",
+      "Class       1372 non-null int64\n",
+      "dtypes: float64(4), int64(1)\n",
+      "memory usage: 53.7 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +234,7 @@
        "      <th></th>\n",
        "      <th>Variance</th>\n",
        "      <th>Skewness</th>\n",
-       "      <th>Curtosis</th>\n",
+       "      <th>Kurtosis</th>\n",
        "      <th>Entropy</th>\n",
        "      <th>Class</th>\n",
        "    </tr>\n",
@@ -184,7 +309,7 @@
        "</div>"
       ],
       "text/plain": [
-       "          Variance     Skewness     Curtosis      Entropy        Class\n",
+       "          Variance     Skewness     Kurtosis      Entropy        Class\n",
        "count  1372.000000  1372.000000  1372.000000  1372.000000  1372.000000\n",
        "mean      0.433735     1.922353     1.397627    -1.191657     0.444606\n",
        "std       2.842763     5.869047     4.310030     2.101013     0.497103\n",
@@ -195,20 +320,18 @@
        "max       6.824800    12.951600    17.927400     2.449500     1.000000"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Describe the dataset\n",
-    "\n",
-    "## Your code here "
+    "df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -217,20 +340,18 @@
        "(1372, 5)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Shape of dataset\n",
-    "\n",
-    "## Your code here "
+    "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -241,15 +362,13 @@
        "Name: Class, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Class frequency of target variable \n",
-    "\n",
-    "## Your code here "
+    "df.Class.value_counts() "
    ]
   },
   {
@@ -258,8 +377,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Your Observations \n",
-    "\n"
+    "# Your Observations \n",
+    "# 1372 rows, continuous floats except for class, no null values, classes are roughly equal in size."
    ]
   },
   {
@@ -275,24 +394,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create features and labels\n",
-    "\n",
-    "## Your code here "
+    "X = df.drop('Class', axis=1)\n",
+    "y = df.Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Perform an 80/20 split\n",
-    "\n",
-    "## Your code here "
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=10)"
    ]
   },
   {
@@ -301,13 +419,13 @@
    "source": [
     "## Step 4: Train the Classifier and Make PRedictions\n",
     "- Create an instance of decision tree classifier with random_state=10 for reproducibility\n",
-    "- Fit the traiing data to the model \n",
+    "- Fit the training data to the model \n",
     "- USe the trained model to make predictions with test data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -321,26 +439,25 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train a DT classifier\n",
-    "\n",
-    "## Your code here "
+    "clf = DecisionTreeClassifier(random_state=10)\n",
+    "clf.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make predictions for test data\n",
-    "\n",
-    "## Your code here "
+    "y_pred = clf.predict(X_test)"
    ]
   },
   {
@@ -356,19 +473,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy is :97.81818181818181\n",
+      "Accuracy is: 97.818\n",
+      "AUC is: 0.978\n",
       "\n",
-      "AUC is :0.98\n",
-      "\n",
-      "Confusion Matrix\n",
-      "----------------\n"
+      "Confusion Matrix:\n"
      ]
     },
     {
@@ -434,15 +549,24 @@
        "All        152  123  275"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Calculate Accuracy , AUC and Confusion matrix \n",
+    "# Calculate accuracy\n",
+    "acc = accuracy_score(y_test,y_pred) * 100\n",
+    "print(f\"Accuracy is: {round(acc,3)}\")\n",
     "\n",
-    "## Your code here "
+    "# Check the AUC for predictions\n",
+    "fpr, tpr, thresholds = roc_curve(y_test, y_pred)\n",
+    "roc_auc = auc(fpr, tpr)\n",
+    "print(f\"AUC is: {round(roc_auc,3)}\")\n",
+    "\n",
+    "# Create a confusion matrix \n",
+    "print('\\nConfusion Matrix:')\n",
+    "pd.crosstab(y_test, y_pred, rownames=['True'], colnames=['Predicted'], margins=True)"
    ]
   },
   {
@@ -451,7 +575,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your observations here \n"
+    "# Your observations here \n",
+    "# The classifier correctly classifies most predictions. Only 3 each of fp and fn."
    ]
   },
   {
@@ -602,7 +727,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
